# bruce-esp

aqm-cyd/: Cargo.toml  build.rs
aqm-cyd/src/: lib.rs  sense.rs
blinky-cyd/: Cargo.toml
blinky-esp32-dev/: Cargo.toml
cyd-bsp/: Cargo.toml  README.md
cyd-bsp/examples/: blinky.rs  hello_world.rs  smart_led.rs
cyd-bsp/examples/clock/: clock.rs  main.rs
cyd-bsp/src/: bsp.rs  lib.rs
ddns-cyd/: .gitignore  Cargo.toml  build.rs
ddns-cyd/src/: bsec.rs  display.rs  sense.rs
timer-blink-cyd/: Cargo.toml
timer-blink-cyd/src/: lib.rs
web-idf-esp/: Cargo.toml  sdkconfig.defaults
web-idf-esp/src/: config.rs  dyndns2.rs  http.rs  led.rs  lib.rs  main.rs  sparko_cyd.rs  tz.rs  wifi.rs
wifi-esp/: Cargo.toml
wifi-esp/.cargo/: config.toml
ws-esp32-c6-147-clock/: Cargo.toml
