[package]
edition      = "2024"
name         = "aqm-cyd"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "aqm-cyd"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

cyd-bsp = {version = "0.1.0", path = "../cyd-bsp" }
embedded-graphics = "0.8.1"
bosch-bme680 = { version = "1.0.3", features = ["embedded-hal-async"] }
heapless = "0.9.2"
chrono = { version = "0.4.42", default-features = false }
libc = "0.2.178"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
#libalgobsec-sys = "0.3.0"
#bsec = { version = "0.5.0", features = ["bme680", "use-bme680", "embedded-hal"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
