[package]
name = "cyd-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "=1.0.0", features = [
  "esp32",
  "log-04",
  "unstable",
] }
mipidsi = "0.9"







esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.0", features = ["esp32", "log-04"] }
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", rev = "728f276b785b6ea4eb538beb1e1a44fe5429b2d1", version = "0.17.0", features = ["esp32"] }
embedded-graphics = "0.8.1"
heapless = "0.9.2"
chrono = { version = "0.4.42", default-features = false }
micromath = "2.1.0"
embedded-hal = "1.0.0"




[lib]
test = false
bench = false



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
