[package]
edition      = "2024"
name         = "ws-esp32-c6-147-clock"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ws-esp32-c6-147-clock"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }

critical-section = "1.2.0"
esp-println      = { version = "0.16.0", features = ["defmt-espflash", "esp32c6"] }
esp-backtrace = { version = "0.18.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }

mipidsi = "0.9"
embedded-graphics = "0.8.1"
heapless = "0.9.2"
chrono = { version = "0.4.42", default-features = false }
micromath = "2.1.0"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
